--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -140,6 +140,17 @@ nav a:hover {
   background: #CB2032;
 }
 
+#home h1 {
+  background: url("../images/novius-os-logo.png") no-repeat;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 50px 0 0 200px;
+  height: 150px;
+  margin-bottom: 2rem;
+}
+
 #no-margin {
   margin: 0;
 }
@@ -213,7 +224,7 @@ td.more-info {
 
 #applications img {
   float: left;
-  margin-right: 2rem;
+  margin: 0 2rem 5rem 0;
 }
 #applications #details div {
   border-bottom: 1px solid #dddddd;
